<resources>
    <!-- Application Name -->
    <string name="app_name">IntelliCards</string>

    <!-- Action Buttons -->
    <string name="submit_btn_text">Submit</string>
    <string name="create_set_btn_text">Create New Set</string>
    <string name="edit_btn_text">EDIT</string>
    <string name="delete_btn_text">DELETE</string>
    <string name="profile_btn_text">Profile</string>
    <string name="recover_btn_text">Recover</string>
    <string name="recovery_page_btn_text">Recovery/Trash bin</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="back_btn_text">Back</string>
    <string name="create_new_flashcard_btn_text">New Flashcard</string>
    <string name="test_btn_text">Test</string>
    <string name="finish_btn_text">Finish</string>
    <string name="correct_checkbox_text">Correct</string>
    <string name="incorrect_checkbox_text">Incorrect</string>
    <string name="flip_btn_text">Flip</string>
    <string name="sign_up_btn_text">Sign Up</string>
    <string name="log_in_btn_text">Log In</string>
    <string name="search_btn_text">search</string>
    <string name="search_clear_btn_text">clear</string>

    <!-- Labels and Placeholders -->
    <string name="hint_placeholder">Enter hint here</string>
    <string name="question_placeholder">Enter question here</string>
    <string name="answer_placeholder">Enter answer here</string>
    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="guest_btn_text">Continue as Guest</string>
    <string name="profile_guest_user_text">Guest User</string>
    <string name="no_info">No data to be displayed!</string>
    <string name="flashcard_set_search_placeholder">Search for a Flashcard Set</string>
    <string name="search_placeholder">Search a keyword</string>

    <!-- Input Limits -->
    <string name="hint_max_length">100</string>
    <string name="question_max_length">200</string>
    <string name="answer_max_length">200</string>
    <string name="username_max_length">25</string>
    <string name="password_max_length">25</string>
    <string name="create_flashcard">Create Flashcard</string>
    <string name="about_me_btn_text">About Me</string>
    <string name="edit_flashcard">Edit Flashcard</string>
    <string name="log_out_text">Log out</string>
    <string name="add_reminder">Add Reminder</string>


</resources>