<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.CreateFlashcardActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/create_flash_text"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/create_flashcard"
        android:textSize="75sp"
        android:textStyle="bold"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:autofillHints="question"
        android:hint="@string/question_placeholder"
        android:inputType="text"
        android:maxLength="@string/question_max_length"
        android:textSize="25sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/create_flash_text" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:autofillHints="answer"
        android:hint="@string/answer_placeholder"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="25sp"
        android:maxLength="@string/answer_max_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question"/>

    <EditText
        android:id="@+id/hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:autofillHints="hint"
        android:ems="10"
        android:hint="@string/hint_placeholder"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="25sp"
        android:maxLength="@string/hint_max_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer"/>

    <!-- Create Flashcard Button -->
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/createFlashcardButton"
        android:layout_width="304dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/btn_confirm"
        android:src="@drawable/baseline_done_24"
        android:tint="@color/btn_txt"
        app:layout_constraintEnd_toStartOf="@id/cancelButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/hint"
        app:layout_constraintTop_toBottomOf="@id/hint" />

    <!-- Cancel Button -->
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/cancelButton"
        android:layout_width="302dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/btn_cancel"
        android:cropToPadding="true"
        android:src="@drawable/baseline_close_24"
        android:tint="@color/btn_txt"
        app:layout_constraintEnd_toEndOf="@id/hint"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/createFlashcardButton"
        app:layout_constraintTop_toBottomOf="@id/hint" />

</androidx.constraintlayout.widget.ConstraintLayout>
