<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"
    app:cardElevation="12dp"
    app:cardCornerRadius="16dp"
    android:layout_margin="16dp"
    android:background="#dbeff8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flashcardText"
            android:layout_width="600dp"
            android:minHeight="200dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text=""
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/flipButton"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:text="@string/flip_btn_text"
                android:layout_marginStart="20dp"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/flashcardTextRecycle"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/correctCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_checkbox_text"
                android:layout_marginTop="8dp"
                android:checked="false"/>

            <CheckBox
                android:id="@+id/incorrectCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_checkbox_text"
                android:layout_marginTop="8dp"
                android:checked="false"/>

            <Button
                android:id="@+id/nextCardButton"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:text="@string/submit_btn_text"
                android:layout_marginStart="20dp"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/flashcardTextRecycle"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>